# 6502-rust-emulator

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.githooks/: pre-push
.github/workflows/: rust.yml
benches/: my_benchmark.rs
src/: lib.rs
tests/: branch_ops.rs  cpu_memory.rs  emulator6502.rs  fixtures.rs  full_programm.rs  load_ops.rs  rustfmt.toml  stack_ops.rs  store_ops.rs
