[package]
name = "emulator6502"
version = "0.1.0"
authors = ["jonas.dresch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#phf = { version = "0.8.0", features = ["macros"] }
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false